package app.domain.model;

public class AuthFacade {

    //String email = getEmailAddress;
  //  public boolean existsUser(Employee.get){
     //   return false;
    //}
}
