@startuml
skinparam classAttributeIconSize 0

class Application {
  +static getInstance()
  +getCurrentSession()
  +getCompany()

}

class RegisterEmployee {
+createEmployee(name, phoneNumber, address,\nemailAddress, citizenCardNumber, role)
+validateEmployee(emp)
+registerEmployee(emp)
+passwordGenerator(name,email)
+addEmployee(emp)
}

class Employee {
-name
-phoneNumber
-address
-emailAddress
-citizenCardNumber
-companyID
+getEmailAddress()
+getName()
}

class Company {

  +getPlatform()
  +getAuthFacade()

}

class Platform {

  +getRegisterEmployee()
}

class RegisterEmployeeController {
+getRoles()
+createEmployee(name, phoneNumber, address,\n emailAddress, citizenCardNumber, role)
+registerEmployee()

}

class RegisterEmployeeUI {

}

class AuthFacade{
+getUserRoles()
+existsUser(email)
}

RegisterEmployeeUI ..> RegisterEmployeeController
RegisterEmployeeController ..> Platform
RegisterEmployeeController ..> Employee
RegisterEmployeeController ..> Company
RegisterEmployeeController ..> Application
RegisterEmployee "1" -> "*" Employee : knows
Platform "1" --> "1" RegisterEmployee : has
Company "1" --> "1" Platform : has
Application ..> Platform
Company ..> AuthFacade
Platform ..> AuthFacade
RegisterEmployee .left.> AuthFacade


@enduml